adding featured projects

--- a/illustration.html
+++ b/illustration.html
@@ -62,7 +62,7 @@
 			<a href="projects/appian-illustrations-updated.html" class="card">
 				<img class="card_image" src="assets/appian-rebrand.png"/>
 				<div class="card_title">Appian Product Illustrations: Rebrand</div>
-				<div class="card_description"> A product illustration initiative I started to introduce graphics to the platform with an emphasis on enhancing user experience and promoting inclusivity</div>
+				<div class="card_description"> Updating existing illustrations to fit the new style guidelines and helping shape the direction of brand styles by embracing the human element of illustration</div>
 				<div class="card_tag_container">
 						<div class="card_tag illustrator">Illustrator</div>
 					</div>
