better on phones

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Regina Yan</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="assets/main.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
@@ -45,14 +46,16 @@
 			<div class="category_subtitle halfwidth fadeIn" style="visibility:hidden" id="delay">
 				A designer and engineer with a passion for <div class="inline_tag" id="tag1"></div> and <div class="inline_tag" id="tag2">Human-Centered Design</div>
 			</br></br>
-				This site is under construction during <p id="month" style="display:inline"></p> <p id="year" style="display:inline"></p> (devs, there are bugs! UXDs, shield your eyes!) but write-ups will be written and code will be coded soon!
+				I'm primarily interested in product and UI/UX design and am inspired by solutions that positively impact our community and environment. Currently I'm in Arlington, VA designing DevOps capabilities and spearheading product illustrations at Appian.
+			</br></br>
+				<!-- This site is under construction during <p id="month" style="display:inline"></p> <p id="year" style="display:inline"></p> (devs, there are bugs! UXDs, shield your eyes!) but write-ups will be written and code will be coded soon! -->
 			</div>
 		</div>
 		<div class="fadeIn" style="visibility:hidden" id="delay3">
 			<div class="category fadeIn" >
-				<div class="category_title">Featured Projects</div>
+				<div class="category_title index">Featured Projects</div>
 			</div>
-			<a href="#container_content"><button class="button_circle_arrow" >
+			<a href="#container_content"><button class="button_circle_arrow index" >
 				<i class="fas fa-arrow-down"></i>			
 			</button></a>
 		</div>
@@ -66,8 +69,8 @@
 					<img class="card_image_full" src="assets/appian-2.png"/>
 				</div>
 				<div class="sideBySideItem width_50 relative">
-					<div class="card_title">Appian</div>
-					<div class="card_description">Designing features for the platform's DevOps capabilities, advocating for UX best practices on Customer Success projects, and leading a pretty cool product illustration team
+					<div class="card_title index">Appian</div>
+					<div class="card_description index">Designing features for the platform's DevOps capabilities, advocating for UX best practices on Customer Success projects, and leading a pretty cool product illustration team
 					</div>
 					<div class="card_tag_container_relative">
 							<div class="card_tag ux">UX/UI</div>
@@ -81,8 +84,8 @@
 					<img class="card_image_full" src="assets/dartmouth-cover.png"/>
 				</div>
 				<div class="sideBySideItem width_50 relative">
-					<div class="card_title">Dartmouth Days</div>
-					<div class="card_description">A series of illustrations that reflect on the four most formative years of my life</div>
+					<div class="card_title index">Dartmouth Days</div>
+					<div class="card_description index">A series of illustrations that reflect on the four most formative years of my life</div>
 					<div class="card_tag_container_relative">
 							<div class="card_tag illustrator">Illustrator</div>
 						</div>
@@ -95,8 +98,8 @@
 					<img class="card_image_full" src="assets/viva-basket.png"/>
 				</div>
 				<div class="sideBySideItem width_50 relative">
-					<div class="card_title">Viva Raw</div>
-					<div class="card_description">Packaging design and branding for a healthy, fresh raw pet food company</div>
+					<div class="card_title index">Viva Raw</div>
+					<div class="card_description index">Packaging design and branding for a healthy, fresh raw pet food company</div>
 					<div class="card_tag_container_relative">
 							<div class="card_tag illustrator">Illustrator</div>
 					<div class="card_tag branding">Branding</div>
@@ -110,8 +113,8 @@
 					<img class="card_image_full" src="assets/climbingwall-cover.jpg"/>
 				</div>
 				<div class="sideBySideItem width_50 relative">
-					<div class="card_title">Climbing Wall</div>
-					<div class="card_description">The hardest thing I've ever done and the proudest I've ever been! My personal free-standing woody</div>
+					<div class="card_title index">Climbing Wall</div>
+					<div class="card_description index">The hardest thing I've ever done and the proudest I've ever been! My personal free-standing woody</div>
 					<div class="card_tag_container_relative">
 							<div class="card_tag painting">Painting</div>
 					<div class="card_tag wood">Wood</div>
@@ -125,8 +128,8 @@
 					<img class="card_image_full" src="assets/ecg-cover.png"/>
 				</div>
 				<div class="sideBySideItem width_50 relative">
-					<div class="card_title">Biking the East Coast Greenway</div>
-					<div class="card_description">What do you get when you mix a month-long vacation opportunity with a budding cyclist going through a quarter-life crisis? A solo bikepacking trip down the East Coast!</div>
+					<div class="card_title index">Biking the East Coast Greenway</div>
+					<div class="card_description index">What do you get when you mix a month-long vacation opportunity with a budding cyclist? A solo bikepacking trip down the East Coast!</div>
 					<div class="card_tag_container_relative">
 							<div class="card_tag biking">Biking</div>
 								<div class="card_tag film">Film</div>
@@ -173,8 +176,8 @@
 </script>
 <script>
 		var i = 0;
-		var txt = 'Hi there, I’m Regina';
-		var speed = 50;
+		var txt = "Hi there, I'm Regina";
+		var speed = 80;
 		var speed2 = 3000;
 		let index = 0;
 		var index2 = 0;
