--- a/projects/appian.html
+++ b/projects/appian.html
@@ -55,7 +55,7 @@
     <div id="container_content" style="padding-top: 150px;"></div>
 	<div class="container_content_stack vertical">
 	</br>
-	<div class="container_sideBySide"> 
+	<div class="container_sideBySide stackPhone"> 
 			<div class="sideBySideItem width_50">
 					<img class="summary_image" src="../assets/appian-8.png"/>
 			</div>
@@ -70,7 +70,7 @@
 		</div>
 	</br></br>	
 	</br>
-	<div class="container_sideBySide"> 
+	<div class="container_sideBySide stackPhone"> 
 			<div class="sideBySideItem width_50">
 					<img class="summary_image outline" src="../assets/icons.gif"/>
 			</div>
@@ -84,7 +84,7 @@
 		</div>
 	</br></br>	
     </br>
-        <div class="container_sideBySide"> 
+        <div class="container_sideBySide stackPhone"> 
 				<div class="sideBySideItem width_50">
                         <img class="summary_image" src="../assets/appian-1.png"/>
 				</div>
@@ -98,7 +98,7 @@
             </div>
         </br></br>
     </br>
-        <div class="container_sideBySide"> 
+        <div class="container_sideBySide stackPhone"> 
 				<div class="sideBySideItem width_50">
                         <img class="summary_image" src="../assets/appian-2.png"/>
 				</div>
@@ -108,13 +108,14 @@
 					<div class="content_text">
 						I designed the user experience behind a centralized dashboard that would help teams quickly understand the health of their application and easily take action to fix problems. </br></br>
 						I particularly enjoyed working on a suite of features that guided users at every part of the development process -- from error alerting during coding to providing overall best practice feedback during review.
+					</br>
 						<a href="https://docs.appian.com/suite/help/20.4/Appian_Release_Notes.html" target="_blank" class="button_secondary">Watch the Release Notes Video  <i class="fas fa-external-link-square-alt"></i></a>
 					</div>
                     </div>
             </div>
         </br></br>
 </br>
-    <div class="container_sideBySide"> 
+    <div class="container_sideBySide stackPhone"> 
             <div class="sideBySideItem width_50">
                     <img class="summary_image" src="../assets/appian-cover.png"/>
             </div>
@@ -128,7 +129,7 @@
         </div>
     </br></br>
 </br>
-<div class="container_sideBySide"> 
+<div class="container_sideBySide stackPhone"> 
         <div class="sideBySideItem width_50">
                 <img class="summary_image" src="../assets/appian-illustrations-cover.png"/>
         </div>
@@ -138,7 +139,9 @@
 				<div class="content_text">
 						Illustrations are an industry standard as eye-catching visuals on tech platforms, but they also aid in storytelling and user experience by illustrating potentially complex concepts through a digestible metaphor.</br></br>
 						I started a product illustration initiative to introduce graphics to the platform that not only added visual interest and enhanced user experience, but also promoted diversity and inclusivity - two values that are extremely important to myself and the company.
+					</br>
 						<a href="https://medium.com/appian-engineering/product-illustration-at-appian-6ea1cf02367e" target="_blank" class="button_primary">Read the Medium Article <i class="fas fa-external-link-square-alt"></i></a>
+					</br>
 						<a href="appian-illustrations.html" class="button_secondary">View the Illustrations  <i class="fas fa-arrow-right"></i></a>
 				</div>
             </div>
