--- a/uiux.html
+++ b/uiux.html
@@ -46,11 +46,11 @@
 			</br>
 				<div class="card_category_description">My journey in UX started when I joined Dartmouth's DALI Lab, an experiential learning lab where students design and develop digital solutions for folks in the Upper Valley. 
 				</br></br>
-				Since then, I've gained experience in the UX field through my work at Appian and my side projects ranging from websites to game development, and I've sharpened my front-end development skills along the way.
+				Since then, I've gained experience in the UX field through my work at Appian and my side projects ranging from websites to game development, and I've sharpened my front-end development skills along the way. 
 				</br></br>
 				I've also become extremely passionate about diversity and inclusivity in the tech space, which I've been able to further explore in product illustrations.
 				</br></br>
-				I'm still learning and still growing, and I'm so excited to see what impactful problems we can solve with thoughtful user experience.
+				I've found that I emphasize pragmatism in my approach, and simplicity (with a hint of playfulness) in my designs. I'm still learning and still growing, and I'm so excited to see what impactful problems we can solve with thoughtful user experience.
 			</div>
 			</div>
 			<a href="projects/appian.html" class="card">
