ok even better mobile

--- a/illustration.html
+++ b/illustration.html
@@ -48,7 +48,7 @@
 					</br></br>
 					<img class="card_image tiny" src="assets/skating-logo.png"/>
 				</br></br>
-						But fast foward to now. Equipped with the power of Adobe Creative Suite and the mighty pen tool (and sidekick command-Z), I've had the chance to work on some pretty cool projects. From thinking about representation in product illustration to making logos for community groups, I've loved exploring the realm of digital art, and I think 15-year old me would be proud.
+						Fast foward to now. Equipped with the power of Adobe Creative Suite and the mighty pen tool, I've had the chance to work on some pretty cool projects. From emphasizing representation in product illustration to creating logos for community groups, I've loved exploring the realm of digital art, and I think 15-year old me would be proud.
 					</div>
 				</div>
 			<a href="projects/appian-illustrations.html" class="card">
