--- a/projects/appian.html
+++ b/projects/appian.html
@@ -149,7 +149,7 @@
 </br>
 	<div class="border"></div>
 			<div class="container_sideBySide"> 
-					<div class="sideBySideItem width_50">
+					<div class="sideBySideItem width_50 fixed">
 					</div>
 					<div class="sideBySideItem_isLast width_50 align_right">
 						<a href="superbill.html" class="navigation">
