--- a/projects/candydots.html
+++ b/projects/candydots.html
@@ -58,7 +58,7 @@
 		<img class="summary_image" src="../assets/candydots-progress1.jpg"/>
 		<div class="border"></div>
 			<div class="container_sideBySide"> 
-					<div class="sideBySideItem width_50">
+					<div class="sideBySideItem width_50 fixed">
 						<a href="clouds.html" class="navigation">
 							<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
 						</a>
