--- a/projects/climbingwall.html
+++ b/projects/climbingwall.html
@@ -240,7 +240,7 @@
 
 				<div class="border"></div>
 				<div class="container_sideBySide"> 
-						<div class="sideBySideItem width_50">
+						<div class="sideBySideItem width_50 fixed">
 						</div>
 						<div class="sideBySideItem_isLast width_50 align_right">
 							<a href="punchy.html" class="navigation">
