--- a/physical.html
+++ b/physical.html
@@ -42,10 +42,7 @@
 			<div class="card_category">
 				<div class="card_category_title">Tinkering with Fiber Arts and Wood</div>
 				<br/>
-				<div class="card_category_description">It seems like everyone picked up quarantine hobbies during the COVID-19 pandemic. Mine were fiber arts and wood projects. The former was spurred by a sudden increase in binge-watching shows after a friend gifted me her TV -- I quickly realized I need to do something with my hands while watching so I didn't feel guilty "wasting my time". Turns out the answer was a whole lotta yarn (and a whole lotta Michael's Rewards Points). 
-				<br/>
-				<br/>
-				My first wood project was my climbing wall, by far my most daunting and rewarding project. That led to a few smaller projects which I've also documented here.
+				<div class="card_category_description">I, like many folks during the COVID-19 pandemic, picked up a couple quarantine hobbies. After a whole lotta yarn (and a whole lotta Michael's Rewards Points), I discovered my love for fiber arts and wood projects.
 				<br/>
 				<br/>
 				I call this entire process "tinkering" because I approach this as a casual and admittedly amateur form of experimentation, but I've thoroughly enjoyed the process of getting thoughts out of my head and turning my ideas into real, tangible things.
