--- a/projects/clouds.html
+++ b/projects/clouds.html
@@ -57,13 +57,13 @@
 		<div class="content_text">A close-up of a cloud (and rain!) </div>
 		<div class="border"></div>
 			<div class="container_sideBySide"> 
-					<div class="sideBySideItem width_50">
+					<div class="sideBySideItem width_50 fixed">
 						<a href="wedge.html" class="navigation">
 							<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
 						</a>
 						<div class="content_text_no_margin">Wedge</div>
 					</div>
-					<div class="sideBySideItem_isLast width_50 align_right">
+					<div class="sideBySideItem_isLast width_50 align_right fixed">
 						<a href="candydots.html" class="navigation">
 							<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
 						</a>
