--- a/projects/colorfactory.html
+++ b/projects/colorfactory.html
@@ -71,13 +71,13 @@
 		<img class="summary_image" src="../assets/colorfactory-cover.jpg"/>
 		<div class="border"></div>
 			<div class="container_sideBySide"> 
-					<div class="sideBySideItem width_50">
+					<div class="sideBySideItem width_50 fixed">
 						<a href="pilot.html" class="navigation">
 							<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
 						</a>
 						<div class="content_text_no_margin">Pilot</div>
 					</div>
-					<div class="sideBySideItem_isLast width_50 align_right">
+					<div class="sideBySideItem_isLast width_50 align_right fixed">
 						<a href="flow.html" class="navigation">
 							<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
 						</a>
