--- a/projects/dartmouthdays.html
+++ b/projects/dartmouthdays.html
@@ -157,13 +157,13 @@
                 </div>
                 <div class="border"></div>
                 <div class="container_sideBySide"> 
-                                <div class="sideBySideItem width_50">
+                                <div class="sideBySideItem width_50 fixed">
                                         <a href="appian-illustrations-updated.html" class="navigation">
                                                 <div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
                                         </a>
                                         <div class="content_text_no_margin">Appian Illustration Rebrand</div>
                                 </div>
-                                <div class="sideBySideItem_isLast width_50 align_right">
+                                <div class="sideBySideItem_isLast width_50 align_right fixed">
                                         <a href="viva.html" class="navigation">
                                                 <div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
                                         </a>
