--- a/projects/outing-guide.html
+++ b/projects/outing-guide.html
@@ -58,13 +58,13 @@
 		<img class="summary_image" src="../assets/dog_after.png"/>
 		<div class="border"></div>
 			<div class="container_sideBySide"> 
-					<div class="sideBySideItem width_50">
+					<div class="sideBySideItem width_50 fixed">
 						<a href="doc-logos.html" class="navigation">
 							<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
 						</a>
 						<div class="content_text_no_margin">DOC Logos</div>
 					</div>
-					<div class="sideBySideItem_isLast width_50 align_right">
+					<div class="sideBySideItem_isLast width_50 align_right fixed">
 						<a href="woodsmokemag.html" class="navigation">
 							<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
 						</a>
