--- a/projects/superbill.html
+++ b/projects/superbill.html
@@ -152,13 +152,13 @@
 	<br>
 		<div class="border"></div>
 			<div class="container_sideBySide"> 
-					<div class="sideBySideItem width_50">
+					<div class="sideBySideItem width_50 fixed">
 						<a href="appian.html" class="navigation">
 							<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
 						</a>
 						<div class="content_text_no_margin">Appian</div>
 					</div>
-					<div class="sideBySideItem_isLast width_50 align_right">
+					<div class="sideBySideItem_isLast width_50 align_right fixed">
 						<a href="trailhead2.html" class="navigation">
 							<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
 						</a>
