--- a/about.html
+++ b/about.html
@@ -126,8 +126,22 @@
 			</button></a>
 			</div>
 	</div>
-	<div class="container_content_wrapper">
-	<div class="container_content_wrapper_content vertical">		
+	<div class="container_content_wrapper_resume">
+		<div class="container_content_wrapper_content vertical">
+			<div class="container_sideBySide">
+				<div class="sideBySideItem width_50">
+					<div class="summary_title">Highlights</div>
+				</div>
+				<div class="sideBySideItem width_50 sideBySideItem_isLast sideBySideItem_alignEnd">
+					<a
+					href="assets/resume_reginayan.pdf"
+					target="_blank" class="button_secondary no_margin">Full Resume PDF <i class="fas
+					fa-external-link-square-alt"></i></a>
+				</div>
+			</div>
+		</div>
+		<div class="padding_resume"></div>
+	<div class="container_content_wrapper_content vertical">	
 	<div class="container_sideBySide"> 
 			<div class="content_text width_50">
 					<div class="section_title"><img class="section_icon" src="assets/regina-resume_experience.svg">Experience</div>
