--- a/about.html
+++ b/about.html
@@ -145,7 +145,7 @@
 	<div class="container_sideBySide"> 
 			<div class="content_text width_50">
 					<div class="section_title"><img class="section_icon" src="assets/regina-resume_experience.svg">Experience</div>
-				<b>UX Designer II @ Appian</b><br/>
+				<b>Senior UX Designer @ Appian</b><br/>
 				2019 - Present<br/>
 				Designing guided app-building experiences and developer operations tools; Spearheading the product illustration initiative with an emphasis on inclusivity<br/><br/>
 				<b>Designer & Design Lead @ DALI Lab</b><br/>
