--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
 			<div class="category_subtitle halfwidth fadeIn" style="visibility:hidden" id="delay">
 				A designer and engineer with a passion for <div class="inline_tag" id="tag1"></div> and <div class="inline_tag" id="tag2">Human-Centered Design</div>
 			</br></br>
-				I'm primarily interested in product and UI/UX design and am inspired by solutions that positively impact our community and environment. Currently I'm in Arlington, VA designing DevOps capabilities and spearheading product illustrations at Appian.
+				I'm primarily interested in product and UI/UX design and am inspired by solutions
+				that positively impact our community and environment. Currently I'm in Arlington, VA
+				crafting guided app-building experiences and spearheading product illustrations at Appian.
 			</br></br>
 				<!-- This site is under construction during <p id="month" style="display:inline"></p> <p id="year" style="display:inline"></p> (devs, there are bugs! UXDs, shield your eyes!) but write-ups will be written and code will be coded soon! -->
 			</div>
