--- a/projects/appian.html
+++ b/projects/appian.html
@@ -152,10 +152,10 @@
 					<div class="sideBySideItem width_50 fixed">
 					</div>
 					<div class="sideBySideItem_isLast width_50 align_right">
-						<a href="superbill.html" class="navigation">
+						<a href="trailhead2.html" class="navigation">
 							<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
 						</a>
-						<div class="content_text_no_margin">SuperBill</div>
+						<div class="content_text_no_margin">Trailhead 2.0</div>
 					</div>
 				</div>
     </div>
