--- a/projects/trailhead.html
+++ b/projects/trailhead.html
@@ -92,10 +92,10 @@
 		<div class="border"></div>
 			<div class="container_sideBySide"> 
 					<div class="sideBySideItem width_50 fixed">
-						<a href="haven.html" class="navigation">
+						<a href="trailhead2.html" class="navigation">
 							<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
 						</a>
-						<div class="content_text_no_margin">Haven</div>
+						<div class="content_text_no_margin">Trailhead 2.0</div>
 					</div>
 					<div class="sideBySideItem_isLast width_50 align_right fixed">
 						<a href="phoenix.html" class="navigation">
