--- a/projects/trailhead2.html
+++ b/projects/trailhead2.html
@@ -93,16 +93,16 @@
 		<div class="border"></div>
 			<div class="container_sideBySide"> 
 					<div class="sideBySideItem width_50 fixed">
-						<a href="superbill.html" class="navigation">
+						<a href="appian.html" class="navigation">
 							<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
 						</a>
-						<div class="content_text_no_margin">SuperBill</div>
+						<div class="content_text_no_margin">Appian</div>
 					</div>
 					<div class="sideBySideItem_isLast width_50 align_right fixed">
-						<a href="haven.html" class="navigation">
+						<a href="trailhead.html" class="navigation">
 							<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
 						</a>
-						<div class="content_text_no_margin">Haven</div>
+						<div class="content_text_no_margin">Trailhead before this redesign</div>
 					</div>
 				</div>
     </div>
