--- a/uiux.html
+++ b/uiux.html
@@ -61,7 +61,7 @@
 						<div class="card_tag ux">UX/UI</div>
 				</div>
 			</a>
-			<a href="projects/superbill.html" class="card">
+			<!-- <a href="projects/superbill.html" class="card">
 				<img class="card_image" src="assets/superbill2.png"/>
 				<div class="card_title">SuperBill</div>
 				<div class="card_description">Helping patients turn their bills into health insurance reimbursement claims so they can save time, money, and LOTS of headache</div>
@@ -70,7 +70,7 @@
 						<div class="card_tag web">Webflow</div>
 						<div class="card_tag ux">UX/UI</div>
 					</div>
-			</a>
+			</a> -->
 			<a href="projects/trailhead2.html" class="card">
 				<img class="card_image" src="assets/trailhead23.png"/>
 				<div class="card_title">Trailhead 2.0</div>
@@ -79,14 +79,14 @@
 						<div class="card_tag ux">UX/UI</div>
 					</div>
 			</a>
-			<a href="projects/haven.html" class="card">
+			<!-- <a href="projects/haven.html" class="card">
 				<img class="card_image" src="assets/haven2.png"/>
 				<div class="card_title">Haven</div>
 				<div class="card_description">Connecting mental health providers to patients through interactive events and mobile "haven" rooms</div>
 				<div class="card_tag_container">
 						<div class="card_tag ux">UX/UI</div>
 					</div>
-			</a>
+			</a> -->
 			<a href="projects/trailhead.html" class="card">
 				<img class="card_image" src="assets/trailhead-cover.jpg"/>
 				<div class="card_title">Trailhead</div>
