--- a/projects/ecg.html
+++ b/projects/ecg.html
@@ -512,10 +512,10 @@
 						
 					</div>
 					<div class="sideBySideItem_isLast width_50 align_right">
-						<a href="southafrica.html" class="navigation">
+						<a href="foca17.html" class="navigation">
 							<div class="content_text_no_margin">Next Adventure &nbsp <i class="fas fa-arrow-right"></i></div>
 						</a>
-						<div class="content_text_no_margin">South Africa Climbing Trip</div>
+						<div class="content_text_no_margin">Journey Back to the Ice</div>
 					</div>
 				</div>
     </div>
