--- a/projects/southafrica.html
+++ b/projects/southafrica.html
@@ -69,10 +69,10 @@
         <div class="border"></div>
 			<div class="container_sideBySide"> 
 					<div class="sideBySideItem width_50">
-						<a href="ecg.html" class="navigation">
+						<a href="foca17.html" class="navigation">
 							<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Adventure</i></div>
 						</a>
-						<div class="content_text_no_margin">Biking the East Coast Greenway</div>
+						<div class="content_text_no_margin">Journey Back to the Ice</div>
 					</div>
 					<div class="sideBySideItem_isLast width_50 align_right">
 						<!-- <a href="southafrica.html" class="navigation">
