adding gold dress to sewing, fixed footer

--- a/projects/projrunway.html
+++ b/projects/projrunway.html
@@ -115,6 +115,25 @@
 							<img class="summary_image" src="../assets/sewing-l.png"/>
 					</div>
 				</div>
+		<br/><br/>
+		<div class="card_title">The Gold Dress: a fitted formal gown with a little
+		bit of sass</div>
+		<div class="content_text">I created a gold dress for the 1920's themed
+		company holiday party. I wanted some sassy cutouts while still keeping
+		the dress classy and company event-appropriate, so we've got a small peek of
+		ab and and healthy peek of back :D Complete with a matching gold bowtie for Shep!!</div>
+		<img class="summary_image" src="../assets/sewing-p.png"/>
+		<div class="container_sideBySide"> 
+			<div class="sideBySideItem width_33">
+					<img class="summary_image" src="../assets/sewing-m.png"/>
+			</div>
+			<div class="sideBySideItem width_33">
+					<img class="summary_image outline" src="../assets/sewing-n.png"/>
+			</div>
+			<div class="sideBySideItem width_33 sideBySideItem_isLast">
+					<img class="summary_image" src="../assets/sewing-o.png"/>
+			</div>
+		</div>
 		<div class="border"></div>
 		
 		<div class="container_sideBySide"> 
@@ -135,12 +154,16 @@
 
 </div>
 <div class="footer">
-        Regina Yan © 2021
-        <div>
-            <i class="far fa-paper-plane"></i> Get in Touch! Contact me at reginayan96@gmail.com
-        </div>
-    </div>
+	<div>
+		Regina Yan © 
+		<p id="year" style="display:inline">2023</p>
+	</div>
+	<div>
+		<i class="far fa-paper-plane"></i> Get in Touch! Contact me at reginayan96@gmail.com
+	</div>
+</div>
 </body>
+<script>document.getElementById("year").innerHTML = new Date().getFullYear();</script>
 <script>
 	$(document).ready(function(){
 		// Add smooth scrolling to all links
