--- a/projects/southafrica.html
+++ b/projects/southafrica.html
@@ -84,12 +84,19 @@
 </div>
 </div>
 <div class="footer">
-        Regina Yan © 2021
-        <div>
-            <i class="far fa-paper-plane"></i> Get in Touch! Contact me at reginayan96@gmail.com
-        </div>
-    </div>
+	<div>
+		Regina Yan © 
+		<p id="year" style="display:inline">2023</p>
+	</div>
+	<div>
+		<i class="far fa-paper-plane"></i> Get in Touch! Contact me at reginayan96@gmail.com
+	</div>
+</div>
+
 </body>
+<script>
+	document.getElementById("year").innerHTML = new Date().getFullYear();
+	</script>
 <script>
 	$(document).ready(function(){
 		// Add smooth scrolling to all links
