--- a/physical.html
+++ b/physical.html
@@ -178,14 +178,16 @@
 
 
 <div class="footer">
-        Regina Yan © 2021
-        <div>
-            <i class="far fa-paper-plane"></i> Get in Touch! Contact me at reginayan96@gmail.com
-        </div>
-    </div>
-
+	<div>
+		Regina Yan © 
+		<p id="year" style="display:inline">2023</p>
+	</div>
+	<div>
+		<i class="far fa-paper-plane"></i> Get in Touch! Contact me at reginayan96@gmail.com
+	</div>
+</div>
 </body>
-
+<script>document.getElementById("year").innerHTML = new Date().getFullYear();</script>
 <script type="text/javascript">
 	function clickNav() {
 		var x = document.getElementById("myTopnav");
